<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>attocube_hardware_interface</name>
  <version>0.0.0</version>
  <description>The attocube_hardware_interface package</description>
  <author email="george.dwyer@ucl.ac.uk">George Dwyer</author>

  <maintainer email="george.dwyer@ucl.ac.uk">George Dwyer</maintainer>

  <license>Apache License 2.0</license>
  <url type="repository">https://www.github.com/grdwyer/attocube_hardware_interface</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>hardware_interface</buildtool_depend>
  <buildtool_depend>pluginlib</buildtool_depend>
  <buildtool_depend>rclcpp</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>controller_manager</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>

  </export>
</package>